Add setup tool